cursive-bootstrap/tests/ui/E-MOD/E-MOD-2453.cursive
// RUN: compile-fail
// DIAG: E-MOD-2453
// SPEC: 8.2
// DESC: align(N) where N is not a power of two

[[align(3)]]  //~ ERROR E-MOD-2453: align not power of two
record BadAlign {
    value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
